# tnqc-springschool

./: README.md
julia/: 11_svd.jl  12_image-compression.jl  13_tensor.jl  14_contraction.jl  21_one-qubit.jl  22_two-qubit.jl  25_mps2statevector.jl  31_statevector2mps.jl  32_tebd.jl  setup.jl
python/: 11_svd.py  12_image-compression.py  13_tensor.py  14_contraction.py  21_one-qubit.py  22_two-qubit.py  23_statevector.py  24_statevector-tn.py  25_mps2statevector.py  26_teleportation.py  27_gate-teleportation.py  31_statevector2mps.py  32_tebd.py
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  plot.rs
